# concept

./: .gitignore  Cargo.toml  Program.cs  _Imports.razor  auth.imba  build-blueprints.sh  bun.lockb  com.rutins.aleks.Concept.json  dune  main.ml  meson.build  package-lock.json  package.json  server.imba
.clj-kondo/.cache/v1/clj/: aleksrutins.concept-server.config.transit.json  aleksrutins.concept-server.core.transit.json  aleksrutins.concept-server.web.controllers.health.transit.json  aleksrutins.concept-server.web.controllers.page.transit.json  aleksrutins.concept-server.web.middleware.core.transit.json  aleksrutins.concept-server.web.middleware.exception.transit.json  aleksrutins.concept-server.web.routes.api.transit.json  aleksrutins.concept-server.web.routes.utils.transit.json  build.transit.json
.lsp/.cache/: db.transit.json
Data/: WeatherForecast.cs  WeatherForecastService.cs
Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  _Host.cshtml
Properties/: launchSettings.json
Shared/: MainLayout.razor  NavMenu.razor
app/: client.imba  login.imba
concept-server/: Dockerfile  README.md  build.clj  deps.edn  kit.edn
concept-server/env/dev/clj/: user.clj
concept-server/env/dev/resources/: logback.xml
concept-server/resources/: system.edn
concept-server/resources/migrations/: 20221130215251-add-users-table.up.sql
concept-server/resources/sql/: queries.sql
data/: com.rutins.aleks.Concept.appdata.xml.in  com.rutins.aleks.Concept.desktop.in  com.rutins.aleks.Concept.gschema.xml  meson.build
data/icons/: meson.build
esy.lock/: index.json
po/: POTFILES  meson.build
src/: app.css  application.vala  concept.gresource.xml  content.rs  data.rs  main.rs  main.vala  meson.build  sidebar.rs  window.blp  window.ui  window.vala
src-tauri/: tauri.conf.json
(+15 files in other folders)
